  [Daniele Viganò]
  * Remove the default 30 day-old view limit in the WebUI calculation list

  [Michele Simionato]
  * Fixed a broken import affecting the command `oq upgrade_nrml`
  * Made it possible to specify multiple file names in <uncertaintyValue/>
    in the source_model_logic_tree file
  * Reduced the data transfer in the object `RlzsAssoc` and improved the
    postprocessing of hazard curves when the option `--hc` is given
  * Changed the `ruptures.xml` exporter to export unique ruptures
  * Fixed a bug when downloading the outputs from the WebUI on Windows
  * Made `oq info --report` fast again by removing the rupture fine filtering
  * Improved the readibility of the CSV export `dmg_total`
  * Removed the column `eid` from the CSV export `ruptures`; also
    renamed the field `serial` to `rup_id` and reordered the fields
  * Changed the event loss table exporter: now it exports an additional
    column with the `rup_id`
  * Changed scenario npz export to export also the GMFs outside the maximum
    distance
  * Fixed scenario npz export when there is a single event
  * Replaced the event tags with numeric event IDs
  * The mean hazard curves are now generated by default
  * Improved the help message of the command `oq purge`
  * Added a `@reader` decorator to mark tasks reading directly from the
    file system
  * Removed the .txt exporter for the GMFs, used internally in the tests
  * Fixed a bug with relative costs which affected master for a long time,
    but not the release 2.3. The insured losses were wrong in that case.
  * Added an .hdf5 exporter for the asset loss table
  * Loss maps and aggregate losses are computed in parallel or sequentially
    depending if the calculation is a postprocessing calculation or not
  * Deprecated the XML risk exporters
  * Removed the .ext5 file
  * Restored the parameter `asset_loss_table` in the event based calculators
  * Added a full .hdf5 exporter for `hcurves-rlzs`