@@ -133,14 +133,13 @@ class LossCurveExporter(object):
         if key.startswith('rlz-'):
             rlzi = int(key[4:])
             ratios = lrgetter.get(aids, rlzi)
-            return {
-                'rlz-%03d' % rlzi: builder.build_curves(assets, ratios, rlzi)}
+            return {'rlz-%03d' % rlzi: builder.build_curves(assets, ratios)}
         else:  # key is 'rlzs', return a dictionary will all realizations
             # this may be disabled in the future unless an asset is specified
             dic = {}
             for rlzi in range(self.R):
                 dic['rlz-%03d' % rlzi] = builder.build_curves(
-                    assets, lrgetter.get(aids, rlzi), rlzi)
+                    assets, lrgetter.get(aids, rlzi))
             return dic
 
     def export_curves_stats(self, aids, key):
