@@ -1,9 +1,9 @@
 asset,loss_type,loss,poe
-a0,nonstructural,1.50000E+01,0.00000E+00
-a0,nonstructural,3.00000E+01,0.00000E+00
-a0,nonstructural,1.50000E+02,0.00000E+00
-a0,nonstructural,3.00000E+02,0.00000E+00
-a0,nonstructural,4.50000E+02,0.00000E+00
+a0,nonstructural,1.50000E+01,1.81269E-01
+a0,nonstructural,3.00000E+01,1.81269E-01
+a0,nonstructural,1.50000E+02,1.81269E-01
+a0,nonstructural,3.00000E+02,1.81269E-01
+a0,nonstructural,4.50000E+02,4.87705E-02
 a0,nonstructural,6.00000E+02,0.00000E+00
 a0,nonstructural,7.50000E+02,0.00000E+00
 a0,nonstructural,9.00000E+02,0.00000E+00
@@ -11,8 +11,8 @@ a0,nonstructural,1.05000E+03,0.00000E+00
 a0,nonstructural,1.20000E+03,0.00000E+00
 a0,nonstructural,1.35000E+03,0.00000E+00
 a0,nonstructural,1.50000E+03,0.00000E+00
-a1,nonstructural,1.00000E+01,4.87705E-02
-a1,nonstructural,2.00000E+01,4.87705E-02
+a1,nonstructural,1.00000E+01,2.59182E-01
+a1,nonstructural,2.00000E+01,2.59182E-01
 a1,nonstructural,1.00000E+02,4.87705E-02
 a1,nonstructural,2.00000E+02,0.00000E+00
 a1,nonstructural,3.00000E+02,0.00000E+00
@@ -23,9 +23,9 @@ a1,nonstructural,7.00000E+02,0.00000E+00
 a1,nonstructural,8.00000E+02,0.00000E+00
 a1,nonstructural,9.00000E+02,0.00000E+00
 a1,nonstructural,1.00000E+03,0.00000E+00
-a2,nonstructural,5.00000E+00,4.87705E-02
-a2,nonstructural,1.00000E+01,4.87705E-02
-a2,nonstructural,5.00000E+01,4.87705E-02
+a2,nonstructural,5.00000E+00,2.59182E-01
+a2,nonstructural,1.00000E+01,2.59182E-01
+a2,nonstructural,5.00000E+01,9.51626E-02
 a2,nonstructural,1.00000E+02,0.00000E+00
 a2,nonstructural,1.50000E+02,0.00000E+00
 a2,nonstructural,2.00000E+02,0.00000E+00
@@ -35,10 +35,10 @@ a2,nonstructural,3.50000E+02,0.00000E+00
 a2,nonstructural,4.00000E+02,0.00000E+00
 a2,nonstructural,4.50000E+02,0.00000E+00
 a2,nonstructural,5.00000E+02,0.00000E+00
-a3,nonstructural,2.50000E+01,0.00000E+00
-a3,nonstructural,5.00000E+01,0.00000E+00
-a3,nonstructural,2.50000E+02,0.00000E+00
-a3,nonstructural,5.00000E+02,0.00000E+00
+a3,nonstructural,2.50000E+01,1.39292E-01
+a3,nonstructural,5.00000E+01,1.39292E-01
+a3,nonstructural,2.50000E+02,1.39292E-01
+a3,nonstructural,5.00000E+02,9.51626E-02
 a3,nonstructural,7.50000E+02,0.00000E+00
 a3,nonstructural,1.00000E+03,0.00000E+00
 a3,nonstructural,1.25000E+03,0.00000E+00
@@ -47,42 +47,42 @@ a3,nonstructural,1.75000E+03,0.00000E+00
 a3,nonstructural,2.00000E+03,0.00000E+00
 a3,nonstructural,2.25000E+03,0.00000E+00
 a3,nonstructural,2.50000E+03,0.00000E+00
-a0,structural,3.00000E+02,4.87705E-02
-a0,structural,6.00000E+02,0.00000E+00
-a0,structural,9.00000E+02,0.00000E+00
-a0,structural,1.20000E+03,0.00000E+00
+a0,structural,3.00000E+02,1.81269E-01
+a0,structural,6.00000E+02,9.51626E-02
+a0,structural,9.00000E+02,4.87705E-02
+a0,structural,1.20000E+03,4.87705E-02
 a0,structural,1.50000E+03,0.00000E+00
 a0,structural,1.80000E+03,0.00000E+00
 a0,structural,2.10000E+03,0.00000E+00
 a0,structural,2.40000E+03,0.00000E+00
 a0,structural,2.70000E+03,0.00000E+00
 a0,structural,3.00000E+03,0.00000E+00
-a1,structural,2.00000E+02,0.00000E+00
-a1,structural,4.00000E+02,0.00000E+00
-a1,structural,6.00000E+02,0.00000E+00
-a1,structural,8.00000E+02,0.00000E+00
-a1,structural,1.00000E+03,0.00000E+00
+a1,structural,2.00000E+02,1.39292E-01
+a1,structural,4.00000E+02,4.87705E-02
+a1,structural,6.00000E+02,4.87705E-02
+a1,structural,8.00000E+02,4.87705E-02
+a1,structural,1.00000E+03,4.87705E-02
 a1,structural,1.20000E+03,0.00000E+00
 a1,structural,1.40000E+03,0.00000E+00
 a1,structural,1.60000E+03,0.00000E+00
 a1,structural,1.80000E+03,0.00000E+00
 a1,structural,2.00000E+03,0.00000E+00
-a2,structural,1.00000E+02,4.87705E-02
-a2,structural,2.00000E+02,4.87705E-02
-a2,structural,3.00000E+02,4.87705E-02
-a2,structural,4.00000E+02,4.87705E-02
-a2,structural,5.00000E+02,4.87705E-02
-a2,structural,6.00000E+02,0.00000E+00
-a2,structural,7.00000E+02,0.00000E+00
+a2,structural,1.00000E+02,2.59182E-01
+a2,structural,2.00000E+02,2.21199E-01
+a2,structural,3.00000E+02,1.81269E-01
+a2,structural,4.00000E+02,1.39292E-01
+a2,structural,5.00000E+02,1.39292E-01
+a2,structural,6.00000E+02,4.87705E-02
+a2,structural,7.00000E+02,4.87705E-02
 a2,structural,8.00000E+02,0.00000E+00
 a2,structural,9.00000E+02,0.00000E+00
 a2,structural,1.00000E+03,0.00000E+00
-a3,structural,5.00000E+02,0.00000E+00
-a3,structural,1.00000E+03,0.00000E+00
-a3,structural,1.50000E+03,0.00000E+00
-a3,structural,2.00000E+03,0.00000E+00
-a3,structural,2.50000E+03,0.00000E+00
-a3,structural,3.00000E+03,0.00000E+00
+a3,structural,5.00000E+02,9.51626E-02
+a3,structural,1.00000E+03,9.51626E-02
+a3,structural,1.50000E+03,9.51626E-02
+a3,structural,2.00000E+03,4.87705E-02
+a3,structural,2.50000E+03,4.87705E-02
+a3,structural,3.00000E+03,4.87705E-02
 a3,structural,3.50000E+03,0.00000E+00
 a3,structural,4.00000E+03,0.00000E+00
 a3,structural,4.50000E+03,0.00000E+00
